# model-nyawit

./: .gitignore  README.md  main.py  pyproject.toml  working.dvc
.dvc/: config
notebooks/: model_deteksi_sawit.ipynb  model_deteksi_sawit_faster-r-cnn.ipynb  model_deteksi_sawit_retina-net.ipynb  model_deteksi_sawit_v1.ipynb
