[project]
name = "model-nyawit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy<2",
    "tensorflow==2.15.0",
    "keras==2.15.0",
    "keras-cv==0.8.2",
    "opencv-python",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "seaborn",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "gdown>=6.1.0",
    "dvc>=3.67.1",
    "dvc-gdrive>=3.0.1",
]
